[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemies/Ghost.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Enemies/ghost_normal.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Enemies/ghost_dead.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Enemies/ghost.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "assault",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

[sub_resource type="CapsuleShape2D" id=3]
radius = 25.3542
height = 26.2341

[sub_resource type="CircleShape2D" id=4]
radius = 238.301

[node name="Ghost" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "normal"

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0.815887, 1.22385 )
shape = SubResource( 3 )

[node name="DetectingBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectingBox"]
shape = SubResource( 4 )
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="DetectingBox" to="." method="_on_DetectingBox_body_entered"]
[connection signal="body_exited" from="DetectingBox" to="." method="_on_DetectingBox_body_exited"]
